...
//   const navigateToProfile = () => {
//     navigation.navigate('Profile');
//   };

//   return (
//     <SafeAreaView style={styles.container}>
//       <View testID="home-tab-root" style={{ flex: 1 }}>
//         <View style={styles.header}>
//           <Text testID="welcome-title" style={styles.welcomeText}>
//             Welcome Back!
//           </Text>
//           <Text style={styles.userName}>{userData?.name}</Text>
//         </View>

//         <View style={styles.card}>
...
